--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="/Applications/Godot.app/Contents/MacOS/Godot"
+executable_path="C:/Users/billz/OneDrive/Desktop/Godot/Godot.exe"
 
 [debug_options]
 
@@ -22,7 +22,7 @@ MultiNodeEdit:scale=true
 
 [dialog_bounds]
 
-project_settings=Rect2(892, 420, 1800, 1400)
+project_settings=Rect2(2088, 89, 1270, 857)
 
 [project_settings]
 
